--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -211,3 +211,114 @@
         }
     }
 }
+
+.praQuem{
+    .container{
+        text-align: center;
+
+        .top{
+            margin: 75px 0 30px 0;
+        }
+        .bottom{
+            margin-bottom: 40px;
+
+            ul{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+
+                li{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    max-width: 375px;
+
+                    .icon{
+                        margin-bottom: 15px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.mercado{
+    background-color: $black;
+    
+    .container{
+        .top{
+            display: flex;
+            justify-content: space-between;
+            color: $white;
+            padding-top: 85px;
+
+            .text{
+                max-width: 543px;
+                .title{
+                    display: flex;
+                    flex-direction: row;
+                    margin-bottom: 8px;
+
+                    img{
+                        margin-right: 10px;
+                    }
+                }
+                h2{
+                    margin-bottom: 25px;
+                }
+            }
+            p{
+                max-width: 488px;
+            }
+        }
+        .bottom{
+            color: $white;
+            padding: 100px 0 80px 0;
+
+            .text{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                margin-bottom: 30px;
+            }
+            .items{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+
+                .card{
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    align-items: center;
+                    padding: 0 40px;
+                    width: 384px;
+                    height: 205px;
+                    background: #161616;
+                    border-radius: 10px;
+
+                    .niveis{
+                        display: flex;
+                        flex-direction: column;
+                        align-items: start;
+                        max-width: 110px;
+
+                        h3{
+                            font-size: 25px;
+                            color: $orange;
+                        }
+                    }
+                    .salario{
+                        font-size: 60px;
+                        font-weight: 700;
+                        line-height: 135%
+                    }
+                }
+            }
+        }
+        .line{
+            border: 1px solid rgba(255, 255, 255, 0.3);
+        }
+    }
+}
