--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -322,3 +322,128 @@
         }
     }
 }
+
+.metodologia{
+    height: auto;
+    background-color: $black;
+    color: $white;
+    padding: 85px 0;
+    
+    .container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        .content-left{
+            max-width: 270px;
+            position: -webkit-sticky;
+            position: sticky;
+            top: 20px;
+
+            .title{
+                margin-bottom: 6px;
+            }
+            h2{
+                margin-bottom: 5px;
+            }
+            p{
+                margin-bottom: 20px;
+            }
+            
+        }
+        .content-right{
+            ul{
+                margin-right: 70px;
+                li{
+                    display: flex;
+                    flex-direction: row;
+                    max-width: 630px;
+                    margin-bottom: 25px;
+    
+                    h5{
+                        margin-bottom: 4px;
+                    }
+                    .icon{
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        min-width: 50px;
+                        max-height: 50px;
+                        background: #161616;
+                        border-radius: 5px;
+                        margin-right: 30px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.depoimentos{
+    padding: 75px 0;
+    height: auto;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #F6F6F8 100%);
+
+    .container{
+        .top{
+            text-align: center;
+            .title{
+                margin-bottom: 6px;
+            }
+        }
+        .items{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            margin-top: 60px;
+
+            .card{
+                max-width: 380px;
+
+                .icon{
+                    margin-bottom: 18px;
+                }
+                h5{
+                    margin: 12px 0 6px 0;
+                }
+            }
+        }
+    }
+}
+
+.grade{
+    height: auto;
+    padding: 75px 0;
+
+    .container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        .content-left{
+            .text{
+                .title{
+                    margin-bottom: 6px;
+                }
+                h2{
+                    max-width: 280px;
+                    margin-bottom: 8px;
+                }
+                p{
+                    max-width: 350px;
+                }
+            }
+            ul{
+                li{
+                    margin-top: 25px;
+                    max-width: 200px;
+
+                    h6{
+                        margin: 12px 4px 0;
+                    }
+                }
+            }
+
+        }
+    }
+}
