--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -507,3 +507,58 @@
         }
     }
 }
+
+.tecnologias{
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px 0 70px 0;
+    background: url('../img/background_tecnologia.svg') center center;
+    color: $white;
+
+    .top{
+        text-align: center;
+        .title{
+            margin-bottom: 6px;
+        }
+    }
+    .logos-top, .logos-bottom{
+        display: flex;
+        flex-direction: row;
+
+        .card{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            padding: 35px 30px;
+            min-width: 391px;
+            height: 120px;
+            background: #161616;
+            border-radius: 4px;
+            margin-left: 30px;
+            
+            .icon{
+                margin-right: 18px;
+                img{
+                    width: 70px;
+                    height: auto;
+                }
+            }
+            .text{
+                p{
+                    font-weight: 400;
+                    font-size: 14px;
+                    line-height: 160%;
+                }
+            }
+        }
+    }
+    .logos-top{
+        margin-top: 40px;
+    }
+    .logos-bottom{
+        margin: 30px 0 60px 0;
+    }
+}
