--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -562,3 +562,56 @@
         margin: 30px 0 60px 0;
     }
 }
+
+.gratuito{
+    height: auto;
+    padding: 90px 0 85px 0;
+    background-color: $black;
+
+    .container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+
+        .text{
+            color: $white;
+
+            .title{
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                img{
+                    margin-right: 8px;
+                }
+            }
+            h2{
+                max-width: 375px;
+                margin: 8px 0;
+            }
+            p{
+                max-width: 490px;
+            }
+            .social{
+                margin-top: 20px;
+                display: flex;
+                flex-direction: row;
+
+                .icon{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 45px;
+                    height: 45px;
+                    background: $white;
+                    &:not(:first-child){
+                        margin-left: 18px;
+                    }
+                }
+            }
+        }
+        .image{
+            margin-right: 90px;
+        }
+    }
+}
