--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -742,3 +742,36 @@
         }
     }
 }
+
+.faq{
+    height: auto;
+    padding-bottom: 100px;
+    
+    .container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        
+        .content-left{
+            
+            .text{
+                max-width: 256px;
+                h2{
+                    margin: 6px 0 8px 0;
+                }
+                p{
+                    margin-bottom: 15px;
+                }
+            }
+            .btn{
+                padding: 10px 30px;
+                font-size: 15px;
+                font-weight: 400;
+                box-shadow: none;
+                .fa-brands{
+                    margin-right: 10px;
+                }
+            }
+        }
+    }
+}
