--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -44,12 +44,12 @@
 }
 
 .trilha{
-    height: 830px;
+    height: auto;
+    padding: 90px 0 100px 0;
     background-color: $black;
     color: $white;
     display: flex;
     align-items: center;
-
     .top{
         display: flex;
         justify-content: space-between;
@@ -66,7 +66,6 @@
             margin-top: 23px;
         }
     }
-
     .content{
         display: flex;
         justify-content: space-between;
@@ -102,7 +101,7 @@
         .image{
             position: relative;
             width: 696px;
-            height: 403px;
+            height: auto;
     
             .play{
                 position: relative;
@@ -142,8 +141,67 @@
                     font-size: 35px;
                     margin-right: 18px;
                 }
+                p{
+                    max-width: 140px;
+                }
             }
         }
+    }
+
+    @media (max-width: 991px){
+        .content{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            ul{
+                display: none;
+            }
+            .image{
+                margin-top: 50px;
+                width: 100%;
+                .box{
+                    text-align: start;
+                    position: static;
+                    width: 100%;
+                    p{
+                        max-width: 100%;
+                    }
+                }
+            }
+        }
+    }
+
+    @media (max-width: 571px){
+        
+        .top{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+        }
+        .content{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            margin: 0;
+            ul{
+                li{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    text-align: center;
+                    .icon{
+                        width: 50px;
+                        height: 50px;
+                        margin-bottom: 10px;
+                    }
+                }
+            }
+            
+        }
+
     }
 }
 
@@ -210,17 +268,70 @@
             }
         }
     }
+
+    @media (max-width: 991px){
+        .container{
+            .content{
+                .top{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    text-align: center;
+                    max-width: 100%;
+                }
+                .items{
+                    .items-top, .items-bottom{
+                        ul{
+                            flex-wrap: wrap;
+                            li{
+                                width: 100%;
+                                &:not(:first-child){
+                                    margin-top: 20px;
+                                }
+                                &:not(:first-child){
+                                    margin-left: 0;
+                                }
+                            }
+                        }
+                    }
+                    .items-top{
+                        margin-bottom: 20px;
+                    }
+                }
+            }
+            .image{
+                display: none;
+            }
+        }
+    }
+
+    @media (max-width: 576px){
+        .container{
+            .content{
+                .whatsapp{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    text-align: center;
+                    img{
+                        margin-bottom: 15px;
+                    }
+                }
+            }
+        }
+    }
 }
 
 .praQuem{
+    height: auto;
     .container{
         text-align: center;
 
         .top{
-            margin: 75px 0 30px 0;
+            padding: 75px 0 30px 0;
         }
         .bottom{
-            margin-bottom: 40px;
+            padding-bottom: 40px;
 
             ul{
                 display: flex;
@@ -231,10 +342,28 @@
                     display: flex;
                     flex-direction: column;
                     align-items: center;
-                    max-width: 375px;
+                    width: 33.3%;
 
                     .icon{
                         margin-bottom: 15px;
+                    }
+                }
+            }
+        }
+    }
+
+    @media (max-width: 576px){
+        .container{
+            .bottom{
+                ul{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    li{
+                        width: 100%;
+                        &:not(:first-child){
+                            margin-top: 30px;
+                        }
                     }
                 }
             }
@@ -313,6 +442,110 @@
                         font-size: 60px;
                         font-weight: 700;
                         line-height: 135%
+                    }
+                }
+            }
+        }
+    }
+
+    @media (max-width: 1210px){
+        .container{
+            .bottom {
+                .items {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                    flex-wrap: wrap;
+    
+                    .pl{
+                        margin-left: 30px;
+                    }
+                    .sr{
+                        margin-top: 30px;
+                    }
+                }
+            }
+        }
+    }
+
+    @media (max-width: 991px){
+        .container{
+            .top{
+                display: flex;
+                flex-direction: column;
+                .text{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    max-width: 100%;
+                    text-align: center;
+                }
+                P{
+                    display: none;
+                }
+            }
+            .bottom{
+                padding: 20px 0 60px 0;
+                .text{
+                    display: flex;
+                    flex-direction: column;
+                    .aviso{
+                        margin-top: 5px;
+                        font-size: 13px;
+                        opacity: 0.8;
+                    }
+                }
+                .items{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    .card{
+                        width: 80%;
+                        &:not(:first-child){
+                            margin-top: 30px;
+                        }
+                    }
+                    .jr, .pl, .sr{
+                        margin: 0;
+                    }
+                }
+            }
+        }
+    }
+
+    @media (max-width: 576px){
+        .container {
+            .bottom{
+                .items{
+                    .card{
+                        width: 100%;
+                        height: auto;
+                        padding: 20px 40px;
+                        &:not(:first-child){
+                            margin-top: 20px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    @media (max-width: 430px){
+        .container {
+            .bottom{
+                .items{
+                    .card{
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        text-align: center;
+                        .niveis{
+                            display: flex;
+                            flex-direction: column;
+                            align-items: center;
+                            max-width: 100%;
+                        }
                     }
                 }
             }
