--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -668,6 +668,43 @@
             }
         }
     }
+
+    @media (max-width: 1150px){
+        .container{
+            .items{
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                flex-wrap: wrap;
+                
+                .d2{
+                    margin-left: 30px;
+                }
+                .d3{
+                    margin-top: 50px;
+                }
+            }
+        }
+    }
+    
+    @media (max-width: 991px){
+        .container{
+            .items{
+                display: flex;
+                flex-direction: column;
+                .card{
+                    &:not(:first-child){
+                        margin-top: 30px;
+                    }
+                }
+                .d2, .d3{
+                    margin: 0;
+                }
+                
+            }
+        }
+    }
 }
 
 .grade{
