--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -938,6 +938,29 @@
         }
         
     }
+
+    @media (max-width: 991px){
+        .container{
+            .content{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+
+                .text{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    h2, p{
+                        max-width: 100%;
+                    }
+                }
+                .image{
+                    margin: 50px 0 0 0;
+                }
+            }
+        }
+    }
 }
 
 .empresas{
@@ -969,6 +992,25 @@
                 img{
                     width: auto;
                     height: 23px
+                }
+            }
+        }
+    }
+
+    @media (max-width: 991px){
+        .container{
+            .top{
+                padding: 70px 0 20px 0;
+            }
+            .bottom{
+                display: flex;
+                justify-content: center;
+                flex-wrap: wrap;
+                .logo{
+                    &:not(:first-child){
+                        margin-left: 30px;
+                    }
+                    margin-top: 40px;
                 }
             }
         }
