--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1030,7 +1030,7 @@
             align-items: center;
             .content-left{
                 padding: 0 55px 0 70px;
-                border-right: 1px solid #2D2E23;;
+                border-right: 1px solid #2D2E23;
                 .box{
                     max-width: 250px;
                     &:not(:first-child){
@@ -1103,6 +1103,61 @@
                 }
             }
             
+        }
+    }
+
+    @media (max-width: 1160px){
+        .container{
+            .content-preco{
+                .content-right{
+                    padding-right: 160px;
+                }
+            }
+        }
+    }
+    @media (max-width: 1100px){
+        .container{
+            .content-preco{
+                .content-right{
+                    padding-right: 130px;
+                }
+            }
+        }
+    }
+    @media (max-width: 1020px){
+        .container{
+            .content-preco{
+                .content-right{
+                    padding-right: 95px;
+                }
+            }
+        }
+    }
+    @media (max-width: 991px){
+        .container{
+            .content-preco{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                padding: 80px 0;
+
+                .content-left{
+                    border-top: 1px solid #2D2E23;
+                    border-right: 0;
+                    padding: 50px 0 0 0;
+                    .box{
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        text-align: center;
+                    }
+                }
+                .content-right{
+                    padding: 0;
+                    order: -1;
+                    padding-bottom: 50px;
+                }
+            }
         }
     }
 }
