--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -35,3 +35,54 @@ details[open]{
 .line{
     border: 1px solid rgba(255, 255, 255, 0.3);
 }
+
+/* Estilos do modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  .modal-video {
+    display: block;
+    margin: auto;
+    margin-top: 80px;
+    width: 70%;
+    height: 80%;
+
+    @media (max-width: 991px){
+        width: 78%;
+        height: 50%;
+    }
+    @media (max-width: 576px){
+        margin-top: 200px;
+        width: 80%;
+        height: 30%;
+    }
+  }
+  
+  .modal-fechar {
+    position: absolute;
+    top: 0;
+    right: 20px;
+    font-size: 40px;
+    font-weight: bold;
+    color: #fff;
+    cursor: pointer;
+  }
+  
+  /* Estilos do botão */
+  .botao {
+    padding: 10px;
+    background-color: #4CAF50;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
